--- a/style.css
+++ b/style.css
@@ -8,43 +8,82 @@
 body {
   background-color: #000000;
   font-family: 'Inter', sans-serif;
-  color: #ff0000;
+  color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   min-height: 100vh;
   padding: 1rem;
+  cursor: url('assets/espada.png') 16 16, auto;
+  background-image: url("assets/ba.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  color: white;
+  background-image: url("assets/background.jpeg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  color: white;
 }
-.profile-card, .links-card {
-  background-color: #1e1e1e;
-  border-radius: 16px;
-  padding: 2rem;
-  margin: 1rem 0;
+
+.profile-card, .linkds-card {
+  background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(180px);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 12px;
   text-align: center;
-  width: 100%;
-  max-width: 380px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+  width: 60%;
+  max-width: 500px;
+  min-height: 300px;
 }
+
 .avatar {
   width: 120px; height: 120px; border-radius: 50%; margin: 0 auto 1rem;
+  margin-top: 12px;
 }
 .name {
   font-size: 1.75rem; font-weight:600; margin-bottom:1rem;
 }
 .links-card .btn {
   display: block;
-  background-color: #2c2c2c;
-  color: #ff0000;
+  background-color: rgba(44, 44, 44, 0.6); /* Cor com transparência */
+  color: #ffffff;
   text-decoration: none;
-  font-weight:500;
-  padding:0.75rem 1rem;
-  margin:0.75rem 0;
-  border-radius:12px;
-  box-shadow:0 2px 6px rgba(0,0,0,0.3);
+  font-weight: 500;
+  padding: 0.75rem 1rem;
+  margin: 0.75rem 0;
+  border-radius: 12px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(180px); /* Efeito de desfoque de fundo, opcional */
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
+
+.btn {
+  text-align: center;
+}
+
 .links-card .btn:hover {
   transform: translateY(-2px);
-  box-shadow:0 4px 12px rgba(0,0,0,0.4);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+}
+
+.snowflake {
+  position: fixed;
+  top: -5vh;
+  color: white;
+  animation-name: fall;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  z-index: 9999;
+  pointer-events: none;
+}
+
+@keyframes fall {
+  to {
+    transform: translateY(110vh);
+  }
 }
